--- a/Server/package.json
+++ b/Server/package.json
@@ -11,14 +11,20 @@
   "author": "titan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "googleapis": "^75.0.0",
     "html-to-text": "^7.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.18",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1",
     "node-html-parser": "^3.2.0",
+    "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7"
   }
 }
