--- a/Client/package.json
+++ b/Client/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^27.1.0",
     "@ckeditor/ckeditor5-react": "^3.0.2",
+    "@craco/craco": "^6.1.2",
+    "@headlessui/react": "^1.2.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -17,6 +19,7 @@
     "jsoneditor-react": "^3.1.1",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
+    "react-aws-s3": "^1.5.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^1.5.0",
     "react-card-flip": "^1.1.1",
@@ -24,9 +27,12 @@
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-list-select": "^0.4.1",
     "react-router-dom": "^5.2.0",
+    "react-s3": "^1.3.1",
     "react-scripts": "4.0.3",
     "react-select": "^4.1.0",
+    "styled-components": "^5.3.0",
     "toastr": "^2.1.4",
     "web-vitals": "^1.0.1"
   },
@@ -53,5 +59,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
